src/objects/Document_Type__c.object
<CustomObject>
    <fields>
        <fullName>Authorised_Entity_Groups_Name__c</fullName>
        <label>Authorised Entity Groups Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Groups__c</fullName>
        <label>Authorised Entity Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Users_Name__c</fullName>
        <label>Authorised Entity Users Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorised_Entity_Users__c</fullName>
        <label>Authorised Entity Users</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automatically_Expire_Previous_Revision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Expire Previous Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>BU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bu3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bu4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Category1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expire_After__c</fullName>
        <label>Expire After(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <label>Followers</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Footer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grace_Period_for_Release__c</fullName>
        <label>Grace Period for Release(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiating_Site_Name__c</fullName>
        <formula>Initiating_Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiating Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Left_vertically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Left(vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Scheme_Name__c</fullName>
        <formula>Number_Scheme__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Scheme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Scheme__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Number Scheme</label>
        <referenceTo>Number_Scheme__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protected_Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protected Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason field for Document  Type Active and Deactive</description>
        <label>Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retention_Duration__c</fullName>
        <label>Retention Duration(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Right_vertically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right(vertically)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Format__c</fullName>
        <label>Secondary Format</label>
        <picklist>
            <picklistValues>
                <fullName>Autosync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Effectiveness_Review_In_Advance__c</fullName>
        <label>Effectiveness Review In Advance(In days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supersede_Previous_Revision__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Supersede Previous Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Duration__c</fullName>
        <label>Valid Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Groups_Name__c</fullName>
        <label>Viewonly Entity Groups Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Groups__c</fullName>
        <label>Viewonly Entity Groups</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Users_Name__c</fullName>
        <label>Viewonly Entity Users Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Viewonly_Entity_Users__c</fullName>
        <label>Viewonly Entity Users</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Watermark_Text__c</fullName>
        <label>Watermark Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Number_Scheme__c</columns>
        <columns>isEditable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Noelles</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Number_Scheme__c</columns>
        <columns>isEditable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Name__c</field>
            <operation>contains</operation>
            <value>Noelle Ong</value>
        </filters>
        <label>Noelle&apos;s Doc Types</label>
    </listViews>
    <nameField>
        <displayFormat>DT-{00000}</displayFormat>
        <label>Document Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>